Added doc and fixed some logic errors
